[gd_scene load_steps=13 format=3 uid="uid://b477hpmhy3eld"]

[ext_resource type="FontFile" uid="uid://3c0rg33qxat7" path="res://pixelmix.ttf" id="1_cndif"]
[ext_resource type="Script" path="res://level_ui.gd" id="1_safnj"]
[ext_resource type="StyleBox" uid="uid://x00am2wba54t" path="res://btn_normal_yellow.tres" id="3_d1vex"]
[ext_resource type="StyleBox" uid="uid://c3l5ty1irxcjf" path="res://btn_normal.tres" id="3_kixn3"]
[ext_resource type="StyleBox" uid="uid://df3wtfjvt8wte" path="res://btn_hover_yellow.tres" id="4_7qomv"]
[ext_resource type="StyleBox" uid="uid://80rt25n1s11n" path="res://btn_hover.tres" id="4_v44um"]
[ext_resource type="StyleBox" uid="uid://gjtgppvyvvkr" path="res://btn_press.tres" id="5_o54ip"]
[ext_resource type="StyleBox" uid="uid://cet0xicm2pc7n" path="res://btn_press_yellow.tres" id="5_xjv28"]
[ext_resource type="StyleBox" uid="uid://bhrkcxo8v5ld4" path="res://remove_focus.tres" id="6_6had5"]
[ext_resource type="StyleBox" uid="uid://yiy2bt3t8etd" path="res://btn_hover_blue.tres" id="8_gpy7e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cxe2m"]
bg_color = Color(0.0862745, 0.0901961, 0.101961, 1)
border_width_top = 1
border_width_bottom = 1
border_color = Color(0.980392, 0.992157, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ycxdu"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.0862745, 0.0901961, 0.101961, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.980392, 0.992157, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[node name="level_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_safnj")
leveltext = "- - - Level 1 - - -"

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -20.0
offset_right = 8.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cxe2m")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -24.0
offset_right = 20.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6
alignment = 1

[node name="label_box" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/label_box"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.819608, 0, 1)
theme_override_fonts/font = ExtResource("1_cndif")
theme_override_font_sizes/font_size = 8
text = "- - - Level 1 - - -"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="btn_start" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.819608, 0, 1)
theme_override_colors/font_pressed_color = Color(0.0862745, 0.0901961, 0.101961, 1)
theme_override_colors/font_hover_color = Color(0.980392, 0.992157, 1, 1)
theme_override_fonts/font = ExtResource("1_cndif")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = ExtResource("3_d1vex")
theme_override_styles/hover = ExtResource("4_7qomv")
theme_override_styles/pressed = ExtResource("5_xjv28")
theme_override_styles/focus = ExtResource("6_6had5")
action_mode = 0
button_mask = 3
text = "Start"

[node name="btn_cont" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.980392, 0.992157, 1, 1)
theme_override_colors/font_pressed_color = Color(0.0862745, 0.0901961, 0.101961, 1)
theme_override_colors/font_hover_color = Color(0.980392, 0.992157, 1, 1)
theme_override_fonts/font = ExtResource("1_cndif")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = ExtResource("3_kixn3")
theme_override_styles/hover = ExtResource("8_gpy7e")
theme_override_styles/pressed = ExtResource("5_o54ip")
theme_override_styles/focus = ExtResource("6_6had5")
action_mode = 0
button_mask = 3
text = "Continue"

[node name="btn_menu" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.980392, 0.992157, 1, 1)
theme_override_colors/font_pressed_color = Color(0.0862745, 0.0901961, 0.101961, 1)
theme_override_colors/font_hover_color = Color(0.980392, 0.992157, 1, 1)
theme_override_fonts/font = ExtResource("1_cndif")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = ExtResource("3_kixn3")
theme_override_styles/hover = ExtResource("4_v44um")
theme_override_styles/pressed = ExtResource("5_o54ip")
theme_override_styles/focus = ExtResource("6_6had5")
action_mode = 0
button_mask = 3
text = "Menu"

[node name="textbox" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 192.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="textbox"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -60.0
offset_right = 80.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_ycxdu")

[node name="Label" type="Label" parent="textbox/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.5
offset_top = -22.0
offset_right = 72.5
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.980392, 0.992157, 1, 1)
theme_override_fonts/font = ExtResource("1_cndif")
theme_override_font_sizes/font_size = 8
text = "You are going to read
this and think to yourself
that you have never seen
such peak fiction before"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="textbox/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -72.5
offset_top = -48.0
offset_right = 72.5
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.819608, 0, 1)
theme_override_fonts/font = ExtResource("1_cndif")
theme_override_font_sizes/font_size = 8
text = "Action Input"
horizontal_alignment = 1
vertical_alignment = 2

[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/btn_start" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/btn_cont" to="." method="_on_btn_cont_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/btn_menu" to="." method="_on_btn_menu_pressed"]
